spade-tests/src/snapshots/spade_tests__parser__extern_unit_cannot_have_body.snap
---
source: spade-tests/src/parser.rs
---
extern entity foo() {}


error: `extern` units cannot have a body
  ┌─ testinput:1:1
  │
1 │ extern entity foo() {}
  │ ^^^^^^
  │
  = Remove this body
  │
1 │ extern entity foo() {}
  │                     --
